--- a/compute_transformation.ipynb
+++ b/compute_transformation.ipynb
@@ -2,14 +2,14 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[0.6758202515525127, -0.7366700077816936, 0.024172033973540508, 0.1126160444903073, -0.2735083112811706, -0.2810997914668707, -0.9198783130922285, 0.03404325107350957, 0.6844415177731555, 0.6150611407593566, -0.3914583015803572, 1.0858791829363057, 0.0, 0.0, 0.0, 1.0]\n"
+      "data: [0.8413915050051063, -0.23751818051424825, -0.48543325929569675, 0.06118632417743634, -0.3401095221102079, -0.9307776858414645, -0.13408360268718222, 0.0031840958976083397, -0.41998315237067324, 0.277917278096935, -0.8639306327825069, 0.3977829281159889, 0.0, 0.0, 0.0, 1.0]\n"
      ]
     }
    ],
@@ -28,18 +28,28 @@
     "        [2*(q_x*q_z - q_w*q_y), 2*(q_y*q_z + q_w*q_x), 1 - 2*(q_x**2 + q_y**2)]\n",
     "    ])\n",
     "    return R\n",
+    "# - position:\n",
+    "#     x: 0.07118632417743634\n",
+    "#     y: -0.04681590410239166\n",
+    "#     z: 0.3977829281159889\n",
+    "#   orientation:\n",
+    "#     x: 0.9534280024769932\n",
+    "#     y: -0.15146075559029815\n",
+    "#     z: -0.23741079801361778\n",
+    "#     w: 0.10803146113648447\n",
+    "\n",
     "\n",
     "translation = np.array([\n",
-    "    0.1126160444903073,\n",
-    "    0.11404325107350957,\n",
-    "    1.0858791829363057\n",
+    "    0.07118632417743634,\n",
+    "    -0.04681590410239166,\n",
+    "    0.3977829281159889\n",
     "    ])\n",
     "\n",
     "quaternion = (\n",
-    "    0.7662209773622327,\n",
-    "    -0.32959757984585303,\n",
-    "    0.23120404318155902,\n",
-    "    0.500814875604071\n",
+    "    0.9534280024769932,\n",
+    "    -0.15146075559029815,\n",
+    "    -0.23741079801361778,\n",
+    "    0.10803146113648447\n",
     "    )\n",
     "\n",
     "\n",
@@ -51,9 +61,9 @@
     "# y_offset = 0.03\n",
     "# z_offset = 0.1\n",
     "\n",
-    "x_offset = -0.0\n",
-    "y_offset = 0.08\n",
-    "z_offset = 0.00\n",
+    "x_offset = -0.01\n",
+    "y_offset = 0.05\n",
+    "z_offset = 0.0\n",
     "\n",
     "translation[0] += x_offset\n",
     "translation[1] += y_offset\n",
@@ -67,26 +77,15 @@
     "\n",
     "\n",
     "T = T.reshape(-1)\n",
-    "print(T.tolist())\n",
+    "print('data:',T.tolist())\n",
     "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "1.092233911007489"
-      ]
-     },
-     "execution_count": 3,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "distance = np.linalg.norm(translation)\n",
     "distance"
@@ -109,7 +108,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.16"
+   "version": "3.8.20"
   }
  },
  "nbformat": 4,
