--- a/compute_transformation.ipynb
+++ b/compute_transformation.ipynb
@@ -9,7 +9,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "data: [0.8413915050051063, -0.23751818051424825, -0.48543325929569675, 0.06118632417743634, -0.3401095221102079, -0.9307776858414645, -0.13408360268718222, 0.0031840958976083397, -0.41998315237067324, 0.277917278096935, -0.8639306327825069, 0.3977829281159889, 0.0, 0.0, 0.0, 1.0]\n"
+      "  data: [-0.21083227554987305, -0.970390124708733, 0.11786754198774074, -0.009316448071705737, -0.5058715212716469, 0.005134287380312741, -0.8625935561198019, 0.19128429431383578, 0.836447102662668, -0.2414883950852833, -0.49197520210510826, 0.7847344338897029, 0.0, 0.0, 0.0, 1.0]\n"
      ]
     }
    ],
@@ -28,29 +28,35 @@
     "        [2*(q_x*q_z - q_w*q_y), 2*(q_y*q_z + q_w*q_x), 1 - 2*(q_x**2 + q_y**2)]\n",
     "    ])\n",
     "    return R\n",
-    "# - position:\n",
-    "#     x: 0.07118632417743634\n",
-    "#     y: -0.04681590410239166\n",
-    "#     z: 0.3977829281159889\n",
-    "#   orientation:\n",
-    "#     x: 0.9534280024769932\n",
-    "#     y: -0.15146075559029815\n",
-    "#     z: -0.23741079801361778\n",
-    "#     w: 0.10803146113648447\n",
     "\n",
-    "\n",
+    "# # pose 1\n",
     "translation = np.array([\n",
-    "    0.07118632417743634,\n",
-    "    -0.04681590410239166,\n",
-    "    0.3977829281159889\n",
+    "    -0.039316448071705735,\n",
+    "    0.12128429431383578,\n",
+    "    0.7947344338897029\n",
     "    ])\n",
     "\n",
     "quaternion = (\n",
-    "    0.9534280024769932,\n",
-    "    -0.15146075559029815,\n",
-    "    -0.23741079801361778,\n",
-    "    0.10803146113648447\n",
+    "    0.5648027618503034,\n",
+    "    -0.6534412301491417,\n",
+    "    0.4224105781299908,\n",
+    "    0.27492126587685567\n",
     "    )\n",
+    "\n",
+    "\n",
+    "# # pose 2\n",
+    "# translation = np.array([\n",
+    "#     -0.23809420003546866,\n",
+    "#     0.1167074247557466,\n",
+    "#     0.7386686615447976\n",
+    "#     ])\n",
+    "\n",
+    "# quaternion = (\n",
+    "#     0.543560992512003,\n",
+    "#     -0.6651238634694483,\n",
+    "#     0.43304826065692587,\n",
+    "#     0.2731682587799183\n",
+    "#     )\n",
     "\n",
     "\n",
     "# compute rotation matrix\n",
@@ -61,9 +67,9 @@
     "# y_offset = 0.03\n",
     "# z_offset = 0.1\n",
     "\n",
-    "x_offset = -0.01\n",
-    "y_offset = 0.05\n",
-    "z_offset = 0.0\n",
+    "x_offset = 0.03\n",
+    "y_offset = 0.07\n",
+    "z_offset = -0.01\n",
     "\n",
     "translation[0] += x_offset\n",
     "translation[1] += y_offset\n",
@@ -77,15 +83,26 @@
     "\n",
     "\n",
     "T = T.reshape(-1)\n",
-    "print('data:',T.tolist())\n",
+    "print('  data:',T.tolist())\n",
     "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.8077651943405382"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "distance = np.linalg.norm(translation)\n",
     "distance"
@@ -108,7 +125,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.20"
+   "version": "3.10.16"
   }
  },
  "nbformat": 4,
